14 July 2011: Wouter
	- Unbound implements RFC6303 (since version 1.4.7).
	- tag 1.4.12rc1 is released as 1.4.12 (without the other fixes in the
	  meantime, those are for 1.4.13).
	- iana portlist updated.

13 July 2011: Wouter
	- Quick fix for contrib/unbound.spec example, no ldns-builtin any more.

11 July 2011: Wouter
	- Fix wildcard expansion no-data reply under an optout NSEC3 zone is
	  validated as insecure, reported by Jia Li (lijia@cnnic.cn).

4 July 2011: Wouter
	- 1.4.12rc1 tag created.

1 July 2011: Wouter
	- version number in example config file.
	- fix that --enable-static-exe does not complain about it unknown.

30 June 2011: Wouter
	- tag relase 1.4.11, trunk is 1.4.12 development.
	- iana portlist updated.
	- fix bug#395: id bits of other query may leak out under conditions
	- fix replyaddr count wrong after jostled queries, which leads to
	  eventual starvation where the daemon has no replyaddrs left to use.
	- fix comment about rndc port, that referred to the old port number.
	- fix that the listening socket is not closed when too many remote
	  control connections are made at the same time.
	- removed ldns-src tarball inside the unbound tarball.

23 June 2011: Wouter
	- Changed -flto check to support clang compiler.
	- tag 1.4.11rc3 created.

17 June 2011: Wouter
	- tag 1.4.11rc1 created.
	- remove warning about signed/unsigned from flex (other flex version).
	- updated aclocal.m4 and libtool to match.
	- tag 1.4.11rc2 created.

16 June 2011: Wouter
	- log-queries: yesno option, default is no, prints querylog.
	- version is 1.4.11.

14 June 2011: Wouter
	- Use -flto compiler flag for link time optimization, if supported.
	- iana portlist updated.

12 June 2011: Wouter
	- IPv6 service address for d.root-servers.net (2001:500:2D::D).

10 June 2011: Wouter
	- unbound-control has version number in the header,
	  UBCT[version]_space_ is the header sent by the client now.
	- Unbound control port number is registered with IANA: