@@ -1,3 +1,6 @@
+1 August 2011: Wouter
+	- Fix autoconf 2.68 warnings
+
 14 July 2011: Wouter
 	- Unbound implements RFC6303 (since version 1.4.7).
 	- tag 1.4.12rc1 is released as 1.4.12 (without the other fixes in the
